--- a/app/src/main/res/layout/activity_serie.xml
+++ b/app/src/main/res/layout/activity_serie.xml
@@ -9,8 +9,8 @@
 
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/main_frame"
-        android:name="com.jj.pelismtv.ui.MainFragment"
+        android:id="@+id/serie_frame"
+        android:name="com.jj.pelismtv.ui.SerieFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
